[package]
name = "anytls-rs"
version = "0.5.4"
edition = "2024"
authors = ["Mickey <mickey@jxo.me>"]
description = "Async TLS proxy with SOCKS5 support for privacy and security."
license = "MIT"
repository = "https://github.com/jxo-me/anytls-rs"
homepage = "https://github.com/jxo-me/anytls-rs"
documentation = "https://docs.rs/anytls-rs"
keywords = ["anytls", "tls", "proxy", "socks5", "security"]
categories = ["network-programming", "cryptography", "asynchronous"]
readme = "README.md"

[dependencies]
# 异步运行时
# tokio = { version = "1.48", features = ["full"] }  # 完整功能（备用）
tokio = { version = "1.48", features = [
    "macros",       # #[tokio::main], #[tokio::test]
    "rt-multi-thread",  # 多线程运行时
    "io-util",      # AsyncReadExt, AsyncWriteExt
    "io-std",       # 标准 IO
    "net",          # TcpListener, TcpStream, UdpSocket
    "sync",         # Mutex, RwLock, mpsc, oneshot, Notify
    "time",         # sleep, interval, timeout, Duration
    "signal",       # 信号处理
    "fs",           # 文件系统操作
] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.14"  # Certificate generation
rustls-pemfile = "2"

# 序列化
serde = { version = "1", features = ["derive"] }

# 网络协议
bytes = "1.10.1"
tokio-util = { version = "0.7", features = ["codec"] }

# 加密哈希
sha2 = "0.10"
md5 = "0.8"

# 随机数
rand = "0.9"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"
socket2 = "0.6"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 证书监控和分析
notify = "8.2"
x509-parser = "0.18"
chrono = "0.4"

# libc is only used by the Android socket-protect helper (EINPROGRESS check
# on the non-blocking connect). Off-Android, the helper compiles down to a
# direct `TcpStream::connect` / `UdpSocket::bind` and the dep is never
# pulled in.
[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
base64 = "0.22"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "session_bench"
harness = false

[[bench]]
name = "stream_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false

[[bench]]
name = "concurrent_bench"
harness = false

[[bench]]
name = "session_pool_bench"
harness = false

[[bench]]
name = "tls_bench"
harness = false

[[bench]]
name = "client_server_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "edge_cases_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[[bin]]
name = "anytls-client"
path = "src/bin/client.rs"

[[bin]]
name = "anytls-server"
path = "src/bin/server.rs"
